--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.6",
+    "@types/web-push": "^3.3.2",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
@@ -32,6 +33,7 @@
     "multer": "^1.4.5-lts.1",
     "otplib": "^12.0.1",
     "rimraf": "^4.4.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "web-push": "^3.5.0"
   }
 }
